adding few modules including maestro

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     "require": {
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "^1.6.0",
-        "acquia/lightning": "~3.2.0"
+        "acquia/lightning": "~3.2.0",
+        "drupal/webform": "^5.0@RC",
+        "drupal/webform_views": "^5.0@alpha",
+        "drupal/maestro": "^2.1@RC"
     },
     "repositories": {
         "drupal": {
