--- a/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/search_api.index.content.yml
+++ b/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/search_api.index.content.yml
@@ -39,9 +39,11 @@ field_settings:
         anonymous: anonymous
       view_mode:
         'entity:node':
+          approval_form: default
           landing_page: full
           new1: default
           page: default
+          webform: default
   status:
     label: null
     datasource_id: 'entity:node'
