--- a/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/views.view.search.yml
+++ b/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/views.view.search.yml
@@ -77,9 +77,11 @@ display:
         options:
           view_modes:
             'entity:node':
+              approval_form: default
               landing_page: teaser
               new1: default
               page: teaser
+              webform: default
       fields:
         rendered:
           table: search_api_index_content
