--- a/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/core.extension.yml
+++ b/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/core.extension.yml
@@ -17,6 +17,7 @@ module:
   dblog: 0
   diff: 0
   dropzonejs: 0
+  dropzonejs_eb_widget: 0
   editor: 0
   embed: 0
   entity_block: 0
@@ -56,7 +57,16 @@ module:
   lightning_search: 0
   lightning_workflow: 0
   link: 0
+  maestro: 0
+  maestro_form_approval_example: 0
+  maestro_interactive_task_plugin_example: 0
+  maestro_noninteractive_task_plugin_example: 0
+  maestro_taskconsole: 0
+  maestro_template_builder: 0
+  maestro_utilities: 0
+  maestro_webform: 0
   media: 0
+  media_entity_generic: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
   media_library: 0
@@ -87,8 +97,10 @@ module:
   simple_oauth_extras: 0
   slick: 0
   slick_entityreference: 0
+  slick_ui: 0
   system: 0
   taxonomy: 0
+  telephone: 0
   text: 0
   token: 0
   toolbar: 0
@@ -96,8 +108,16 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  video_embed_wysiwyg: 0
   views_infinite_scroll: 0
   views_ui: 0
+  webform: 0
+  webform_image_select: 0
+  webform_node: 0
+  webform_scheduled_email: 0
+  webform_templates: 0
+  webform_ui: 0
+  webform_views: 0
   workflows: 0
   menu_link_content: 1
   pathauto: 1
