--- a/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/lightning_core.versions.yml
+++ b/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/lightning_core.versions.yml
@@ -102,3 +102,23 @@ moderation_sidebar: 1.1.0
 pathauto: 1.3.0
 lightning: 3.202.0
 update: 8.6.3
+webform: 5.0.0-rc26
+webform_ui: 5.0.0-rc26
+telephone: 8.6.3
+dropzonejs_eb_widget: 2.0.0-alpha3
+media_entity_generic: 1.0.0-alpha1
+slick_ui: 1.0.0
+video_embed_wysiwyg: 2.0.0
+webform_node: 5.0.0-rc26
+webform_scheduled_email: 5.0.0-rc26
+webform_image_select: 5.0.0-rc26
+webform_templates: 5.0.0-rc26
+webform_views: 5.0.0-alpha6
+maestro: 2.1.0-rc1
+maestro_taskconsole: 2.1.0-rc1
+maestro_form_approval_example: 2.1.0-rc1
+maestro_interactive_task_plugin_example: 2.1.0-rc1
+maestro_noninteractive_task_plugin_example: 2.1.0-rc1
+maestro_template_builder: 2.1.0-rc1
+maestro_utilities: 2.1.0-rc1
+maestro_webform: 2.1.0-rc1
