--- a/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/user.role.layout_manager.yml
+++ b/docroot/dev/config_Z4DEZawk7FcB9cETe0omIKmi0sWYen25RYRbGoi_P8uyM5vKqRd_gACxLot2whWNHDvKEv2f-g/sync/user.role.layout_manager.yml
@@ -11,6 +11,8 @@ is_admin: false
 permissions:
   - 'administer node display'
   - 'administer panelizer'
+  - 'administer panelizer node approval_form defaults'
   - 'administer panelizer node landing_page defaults'
   - 'administer panelizer node new1 defaults'
   - 'administer panelizer node page defaults'
+  - 'administer panelizer node webform defaults'
